--- a/branches/mcxtrace_1_0/datablad.tex
+++ b/branches/mcxtrace_1_0/datablad.tex
@@ -57,7 +57,7 @@ Telefax +45 4677 4013
 \newpage\ifodd\csname c@page\endcsname\noindent\hbox{}\par\newpage\else\fi
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
- \MCS , Version \version}
+ \MCX , Version \version}
 \forfatter{Peter Willendrup, Emmanuel Farhi, Erik Knudsen and Kim Lefmann}
 \isbn{ISBN 978--87--550--3679--6}\issn{0106--2840}
 \afdeling{Materials Research Department}
