--- a/branches/mcxtrace_1_0/datablad_comp.tex
+++ b/branches/mcxtrace_1_0/datablad_comp.tex
@@ -50,7 +50,7 @@ Telefax +45 4677 4013
 \newpage\ifodd\csname c@page\endcsname\noindent\hbox{}\par\newpage\else\fi
 \begin{datablad}
 \titel{Component Manual to the Neutron Ray-Tracing Package
- \MCS , Version \version}
+ \MCX , Version \version}
 \forfatter{Peter Kj\ae r Willendrup, Erik Knudsen, Kim Lefmann and Emmanuel Farhi}
 \isbn{ISBN 978--87--550--3680--2}\issn{0106--2840}
 \afdeling{Materials Research Department}
