--- a/branches/mcxtrace_1_0/intro.tex
+++ b/branches/mcxtrace_1_0/intro.tex
@@ -39,7 +39,7 @@ effort.
 
 
 %The very early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
-%These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
+%These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcxtrace_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
 %Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
 %
 %The neutron ray-tracing Monte-Carlo method has been used widely for
@@ -259,7 +259,7 @@ parts:
 \item The \MCX\ component library contains a collection of
   well-tested, as well as user contributed, beam components that can be used in simulations.
   The \MCX\ component library is documented in a separate manual
-  and on the \MCX\ web-page~\cite{mcstas_webpage}, but a short overview of these
+  and on the \MCX\ web-page~\cite{mcxtrace_webpage}, but a short overview of these
   components is given in chapter~\ref{s:components} of the Manual.
   %This
   %library is documented in detail in chapter~\ref{s:components}. Code
@@ -279,8 +279,8 @@ documentation is currently only available in the appendix of the Component manua
 A list of library calls that may be used in component definitions
 appears in appendix~\ref{c:kernelcalls}, and
 an explanation of the \MCX\ terminology can be
-found in appendix~\ref{s:terminology} of the Manual..
-Plans for future extensions are presented on the \MCX\ web-page~\cite{mcstas_webpage} as well as in section~\ref{s:future}.
+found in appendix~\ref{s:terminology} of the Manual.
+Plans for future extensions are presented on the \MCX\ web-page~\cite{mcxtrace_webpage} as well as in section~\ref{s:future}.
 
 
 %The \MCX\ package consists of four levels:
