--- a/branches/mcxtrace_1_0/manual.tex
+++ b/branches/mcxtrace_1_0/manual.tex
@@ -51,6 +51,9 @@
 \newcommand{\reldate}{{Apr, 2011}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
+\newcommand{\NBIlong}{Niels Bohr Institute, Univeristy of Copenhagen, Copenhagen, Denmark}
+\newcommand{\Lifelong}{Faculty for Life Sciences, University of Copenhagen, Copenhagen, Denmark}
+
 % enable index generation
 \makeindex
 
