add mcxtrace website ref
git-svn-id: https://svn.mccode.org/svn/McStasTeX@307 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/mcstas.bib
+++ b/branches/mcxtrace_1_0/mcstas.bib
@@ -62,7 +62,9 @@
 @misc{mcstas_webpage,
    note      = {See http://www.mcstas.org}
 }
-
+@misc{mcxtrace_webpage,
+  note       = {See http://www.mcxtrace.org}
+}
 @misc{ess_webpage,
    note      = {See http://www.ess-europe.de}
 }
