--- a/branches/mcxtrace_1_0/kernelcalls.tex
+++ b/branches/mcxtrace_1_0/kernelcalls.tex
@@ -4,7 +4,7 @@
 \label{c:kernelcalls}
 \index{Library|textbf}
 \index{Library!Shared|see{Library/Components/share}}
-\index{Library!mcstas-r|see{Library/Run-time}}
+\index{Library!mcxtrace-r|see{Library/Run-time}}
 
 The \MCX\ Library contains a number of built-in functions
 and conversion constants which are useful when constructing
@@ -37,10 +37,10 @@ of implementation, see {\bf Res\_monitor}.
 In this Appendix, we present a short list of both each of the library contents
 and the run-time features.
 
-\section{Run-time calls and functions (\texttt{mcstas-r})}
+\section{Run-time calls and functions (\texttt{mcxtrace-r})}
 \label{s:calls:run-time}
 \index{Library!Run-time|textbf}
-\index{Library!mcstas-r|see{Library/Run-time}}
+\index{Library!mcxtrace-r|see{Library/Run-time}}
 Here we list a number of preprogrammed macros
 which may ease the task of writing component and instrument definitions.
 
