--- a/branches/mcxtrace_1_0/monochromator_curved.tex
+++ b/branches/mcxtrace_1_0/monochromator_curved.tex
@@ -37,8 +37,8 @@ All single crystals are positioned in the same vertical plane,
 but tilted accordingly to the curvature radius.
 
 The constant monochromator reflectivity, $R_0$ can be replaced by
-a file of tabulated reflectivities $reflect$ (\verb+*.rfl+ in \verb+MCSTAS/data+). In the same sense, the transmission
-can be modeled by a tabulated file $transmit$ (for non-reflected neutrons, \verb+*.trm+ in \verb+MCSTAS/data+).
+a file of tabulated reflectivities $reflect$ (\verb+*.rfl+ in \verb+MCXTAS/data+). In the same sense, the transmission
+can be modeled by a tabulated file $transmit$ (for non-reflected neutrons, \verb+*.trm+ in \verb+MCXTAS/data+).
 The most useful of these files for Monochromator\_curved are \verb+HOPG.rlf+ and \verb+HOPG.trm+.
 
 As for {\bf Monochromator\_flat}, the crystal is assumed to be infinitely
