--- a/branches/mcxtrace_1_0/powder2.tex
+++ b/branches/mcxtrace_1_0/powder2.tex
@@ -18,7 +18,7 @@ and is thus often ignored, making a {\em thin sample approximation}.
 In Monte Carlo simulations, the beam attenuation
 is easily taken care of, as will be shown below.
 For simplicity we ignore multiple scattering, which will
-be implemented in a later version of \MCS .
+be implemented in a later version of \MCX .
 
 \subsection{Weight transformation in samples; focusing}
 Let us look in detail on how to simulate the physics of the scattering
