--- a/branches/mcxtrace_1_0/sources.tex
+++ b/branches/mcxtrace_1_0/sources.tex
@@ -5,7 +5,7 @@
 \index{Sources|textbf}
 \index{Library!Components!sources}
 
-\MCS\ contains a number of different source components,
+\MCX\ contains a number of different source components,
 and any simulation will usually contain exactly one of these sources.
 The main function of a source is to determine a set of initial
 parameters $({\bf r}, {\bf v}, t)$
@@ -75,7 +75,7 @@ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
 \end{equation}
 where the source flux is now given a $\lambda$-dependence.
 
-As a start, we recommend new \MCS\ users to use the
+As a start, we recommend new \MCX\ users to use the
 {\bf Source\_simple} component.
 Slightly more realistic sources are {\bf Source\_Maxwell\_3} for
 continuous sources or {\bf Moderator} for time-of-flight sources.
@@ -127,7 +127,7 @@ See section \ref{sources-seealso} for details.
 \section{Other sources components: virtual sources (event files)}
 \label{sources-seealso}
 
-%There are many other source definitions in \MCS .
+%There are many other source definitions in \MCX .
 
 %Detailed pulsed source components are available for new facilities
 %in a number of contributed components:
@@ -143,7 +143,7 @@ See section \ref{sources-seealso} for details.
 %The following components are then useful:
 
 %\begin{itemize}
-%\item{{\bf misc/Virtual\_input} can read a \MCS\ event file
+%\item{{\bf misc/Virtual\_input} can read a \MCX\ event file
 %(in text or binary format), often bringing an order-of-magnitude speed-up.
 %See section \ref{virtual_input}.}
 %\item{{\bf contrib/Virtual\_tripoli4\_input} does the same, but from event files (text format) obtained from the \emph{Tripoli4} \cite{tripoli_webpage} reactor simulation program. Such files are usually huge.\index{Tripoli}}
@@ -152,7 +152,8 @@ See section \ref{sources-seealso} for details.
 %\item{{\bf optics/Filter\_gen} reads a 1D distribution from a file, and may either modify or set the flux according to it. See section \ref{filter-gen}.}
 %\end{itemize}
 
-\begin{itemize}
-\item{{\bf misc/Virtual\_input} can read a \MCX\ event file
-(in text or binary format), often bringing an order-of-magnitude speed-up.
-See section \ref{virtual_input}.}
+%\begin{itemize}
+%\item{{\bf misc/Virtual\_input} can read a \MCX\ event file
+%(in text or binary format), often bringing an order-of-magnitude speed-up.
+%See section \ref{virtual_input}.}
+
