--- a/branches/mcxtrace_1_0/preface_comp.tex
+++ b/branches/mcxtrace_1_0/preface_comp.tex
@@ -4,7 +4,7 @@
 \chapter*{Preface and acknowledgements}
 This document contains information on the x-ray scattering components
 which are the building blocks for defining instruments
-in the Monte Carlo Xray-tracing program \MCS version \version . The initial
+in the Monte Carlo Xray-tracing program \MCX version \version . The initial
 release in June 2011 of version 1.0 was presented in Ref.~\cite{nn_10_20}.
 The reader of this
 document is not supposed to have specific knowledge of xray scattering,
@@ -16,7 +16,7 @@ We assume familiarity with the use of
 the C programming language.
 
 %We especially like to thank Kristian Nielsen for laying a solid foundation
-%for the \MCS\ system, which the authors of this manual benefit from daily.
+%for the \MCX\ system, which the authors of this manual benefit from daily.
 We would like to explicitly thank all the partners in this project:
 \begin{itemize}
 \item The European Synchrotron Radiation Facility (ESRF), Grenoble, France
@@ -27,12 +27,12 @@ We would like to explicitly thank all the partners in this project:
 \end{itemize}
 
 As
-\MCX has inherited much of its functionality from its sister \MCS we take the oppurtunity to thank 
+\MCX has inherited much of its functionality from its sister \MCX we take the oppurtunity to thank 
 Dir.~Kurt N.~Clausen, PSI, for his continuous
-support to \MCS\ and for having initiated the project.
-Continuous support to \MCS\ has also come from Prof.~Robert McGreevy, ISIS.
+support to \MCX\ and for having initiated the project.
+Continuous support to \MCX\ has also come from Prof.~Robert McGreevy, ISIS.
 Apart from the authors of this manual, also Per-Olof \AA strand, NTNU Trondheim,
-has contributed to the development of the \MCS\ system.
+has contributed to the development of the \MCX\ system.
 
 We have further benefited
 from discussions with many other people in the scattering
@@ -47,7 +47,7 @@ In case of errors, questions, or suggestions,
 %or other need for support should arise,
 do not hesitate to
 contact the user/developer community by writing to the user mailiing list \verb+users@mcxtrace.órg+
-or consult the \MCX\ home page~\cite{mcxtrace_webpage}. A special devlopement website (shared with the sister project \MCS) complete with bug/request reporting service is available \cite{trac_webpage}.
+or consult the \MCX\ home page~\cite{mcxtrace_webpage}. A special devlopement website (shared with the sister project \MCX) complete with bug/request reporting service is available \cite{trac_webpage}.
 
 Some highlight of the feature in this the first release of McXtrace:
 
