--- a/branches/mcxtrace_1_0/samples.tex
+++ b/branches/mcxtrace_1_0/samples.tex
@@ -9,15 +9,16 @@ instrument to model. However, for purpose of simulating
 instrument performance, details of the samples are rather unimportant,
 allowing for simple approximations. On the contrary, for full
 virtual experiments it is of importance to have realistic and
-detailed sample descriptions. \MCS\ contains both simple and detailed
+detailed sample descriptions. \MCX\ contains both simple and detailed
 samples.
 
-We first consider incoherent scattering. The simple component {\bf V-sample}
-performs both incoherent scattering and absorption.
+%We first consider incoherent scattering. The simple component {\bf V-sample}
+%performs both incoherent scattering and absorption.
 
 An important component class is elastic Bragg scattering from an ideal powder.
 The component {\bf PowderN} models a powder scatterer with reflections
-given in an input file. To scatter on a single Bragg peak, the {\bf Powder1} component may be used.
+given in an input file. 
+%To scatter on a single Bragg peak, the {\bf Powder1} component may be used.
 The component includes absorption, incoherent scattering, direct beam
 transmission and can assume \emph{concentric} shape, i.e. can be used
 for modelling sample enviroments.
@@ -34,48 +35,49 @@ from a LAZY / Crystallographica file.
 This component also allows anisotropic mosaicity
 and $\Delta d/d$ lattice space variation.
 
-Isotropic small-angle scattering is simulated in {\bf Sans\_Spheres},
+Isotropic small-angle scattering is simulated in {\bf Saxs\_Spheres},
 which models scattering from a collection of hard spheres (dilute colloids).
 
-Inelastic scattering from a dispersion is exemplified by
-the component {\bf Phonon\_simple}, which models
-scattering from a single acoustic phonon branch.
+%Inelastic scattering from a dispersion is exemplified by
+%the component {\bf Phonon\_simple}, which models
+%scattering from a single acoustic phonon branch.
 
-For a more general sample model, the {\bf Isotropic\_Sqw} component
-is able to simulate all kinds of isotropic materials:
-Liquids, glasses, polymers, powders, etc, with $S(q,\omega)$ table
-specified by an input file.
-Physical processes include coherent/incoherent scattering,
-both elastic and inelastic, with absorption and multiple scattering.
-Moreover, this component may be used concentrically,
-to model a sample environment.
-Thus it may handle most samples except single crystals.
+%For a more general sample model, the {\bf Isotropic\_Sqw} component
+%is able to simulate all kinds of isotropic materials:
+%Liquids, glasses, polymers, powders, etc, with $S(q,\omega)$ table
+%specified by an input file.
+%Physical processes include coherent/incoherent scattering,
+%both elastic and inelastic, with absorption and multiple scattering.
+%Moreover, this component may be used concentrically,
+%to model a sample environment.
+%Thus it may handle most samples except single crystals.
 
-\begin{table}
-  \begin{center}
-  {\let\my=\\
-    \begin{tabular}{|c|cc|cc|c|c|}
-    \hline
-    Sample        & \multicolumn{2}{c|}{Coherent} & \multicolumn{2}{c|}{Incoherent} &&\\
-    Process       & Elastic & Inelastic & Elastic & Inelastic & Absorption & Multi. Scatt.\\
-    \hline
-    Phonon\_simple&         & X         &         &           & 1 & \\
-    Isotropic\_Sqw&  X      & X         & X       & X         & 2 & X \\
-    Powder1       &  1 line &           & X       &           & 1 & \\
-    PowderN       &  N lines&           & X       &           & 1 & \\
-    Sans\_spheres &  colloid&           &         &           & 1 & \\
-    Single\_crystal& X      &           & X       &           & 2 & X \\
-    V\_sample     &         &           & X       & QE broad. & 1 & \\
-    Tunneling\_sample &     & X         & X       & QE broad. & 1 & \\
-    \hline
-    \end{tabular}
-    \caption{Processes implemented in sample components. Absorption: 1=single only, 2=with secondary}
-    \label{t:sample-process}
-  }
-  \end{center}
-\end{table}
-\subsection{Neutron scattering notation}
-In sample components, we use the notation common for neutron scattering,
+%\begin{table}
+%  \begin{center}
+%  {\let\my=\\
+%    \begin{tabular}{|c|cc|cc|c|c|}
+%    \hline
+%    Sample        & \multicolumn{2}{c|}{Coherent} & \multicolumn{2}{c|}{Incoherent} &&\\
+%    Process       & Elastic & Inelastic & Elastic & Inelastic & Absorption & Multi. Scatt.\\
+%    \hline
+%    Phonon\_simple&         & X         &         &           & 1 & \\
+%    Isotropic\_Sqw&  X      & X         & X       & X         & 2 & X \\
+%    Powder1       &  1 line &           & X       &           & 1 & \\
+%    PowderN       &  N lines&           & X       &           & 1 & \\
+%    Sans\_spheres &  colloid&           &         &           & 1 & \\
+%    Single\_crystal& X      &           & X       &           & 2 & X \\
+%    V\_sample     &         &           & X       & QE broad. & 1 & \\
+%    Tunneling\_sample &     & X         & X       & QE broad. & 1 & \\
+%    \hline
+%    \end{tabular}
+%    \caption{Processes implemented in sample components. Absorption: 1=single only, 2=with secondary}
+%    \label{t:sample-process}
+%  }
+%  \end{center}
+%\end{table}
+
+\subsection{Scattering notation}
+In sample components, we use a notation common for scattering experiments,
 where the wave vector transfer is denoted the {\em scattering vector}
 \begin{equation} \label{eq:q-transfer}
 {\bf q} \equiv {\bf k}_{\rm i} - {\bf k}_{\rm f} .
@@ -103,7 +105,7 @@ In the description, we ignore multiple scattering, which is however
 
 The sample has an absorption cross section per unit cell of
 $\sigma_c^a$ and a scattering cross section per unit cell
-of $\sigma_c^s$. The neutron path length
+of $\sigma_c^s$. The x-ray path length
 in the sample before the scattering event is denoted by $l_1$, and
 the path length within the sample after the scattering
 is denoted by $l_2$, see figure \ref{powderFig}.
@@ -127,12 +129,12 @@ where the normalization $f_{\rm att}(0)=1$.
 \label{powderFig}
 \end{figure}
 
-The probability for a given neutron ray to be scattered from within the interval
+The probability for a given x-ray to be scattered from within the interval
 $[ l_1 ; l_1+dl ]$ will be
 \begin{equation}
 P(l_1) dl = \mu^s f_{\rm att}(l_1) dl ,
 \end{equation}
-while the probability for a neutron to be scattered from within
+while the probability for a x-ray to be scattered from within
 this interval into the solid angle $\Omega$ {\em and}
 not being scattered further
 or absorbed on the way out of the sample is
@@ -141,7 +143,7 @@ P(l_1,\Omega) dl d\Omega =
   \mu^s f_{\rm att}(l_1) f_{\rm att}(l_2) \gamma(\Omega) d\Omega dl ,
 \end{equation}
 where $\gamma(\Omega)$ is the directional distribution
-of the scattered neutrons, and $l_2$ is determined by
+of the scattered x-rays, and $l_2$ is determined by
 Monte Carlo chocies of $l_1$, $\Omega$,
 and from the sample geometry, see e.g. figure \ref{powderFig}.
 
@@ -159,8 +161,8 @@ f(l_1,\Omega) = g(\Omega) / l_{\rm full} ,
 \end{equation}
 $l_{\rm full}$ is here the path length through the sample
 as taken by a non-scattered neutron (although we here
-assume that all simulated neutrons are being scattered).
-According to (\ref{probrule}), the neutron weight factor
+assume that all simulated x-rays are being scattered).
+According to (\ref{probrule}), the x-ray weight factor
 is now adjusted by the amount
 \begin{equation}     \label{sampleprob}
 \pi_i(l_1,\Omega) =
@@ -170,7 +172,7 @@ is now adjusted by the amount
 
 In analogy with the source components, it is possible to define
 "interesting" directions for the scattering.
-One will then try to focus the scattered neutrons,
+One will then try to focus the scattered x-rays,
 choosing a $g(\Omega)$, which peaks around these directions.
 To do this, one uses (\ref{sampleprob}), where the
 fraction $\gamma(\Omega)/g(\Omega)$ corrects for the focusing.
@@ -183,24 +185,16 @@ and a non-focusing option.
 
 \subsection{Future development of sample components}
 There is still room for much more development of functionality in
-\MCS\ samples.
-
-A more general SANS sample is under development.
-In addition, a reflectometry sample will soon be developed. In the mean time, you may use the \verb+SiC+ contributed component.
-
-In general, all samples are assumed to be homogeneous. There would also be
-potential in developing an inhomogeneous sample, e.g. with
-spatially varying lattice constant, relevant for stress/strain scanners.
-Inhomogeneously absorbing sample for tomography could also be possible.
-Further, no polarization effects are yet taken into account in any
-of the samples.
+\MCX\ samples.
 
 
-\input{vanadium.tex}         \newpage
-\input{tunneling.tex}        \newpage
+
+%\input{vanadium.tex}         \newpage
+%\input{tunneling.tex}        \newpage
 \input{powderN.tex}          \newpage
 \input{Single_crystal.tex}   \newpage
-\input{sans.tex}             \newpage
-\input{phonon.tex}           \newpage
+\input{saxs.tex}             \newpage
+\input{absorption_phantom.tex} \newpage
+%\input{phonon.tex}           \newpage
 %\input{LSCO.tex}            \newpage
-\input{isotropic_sqw.tex}
+%\input{isotropic_sqw.tex}
