--- a/branches/mcxtrace_1_0/source_gaussian.tex
+++ b/branches/mcxtrace_1_0/source_gaussian.tex
@@ -1,10 +1,9 @@
-\section{Source\_gaussian: Gaussian crossection source}
-\label{source-flat}
-\index{Sources!Gaussian crossection source}
-\component{Source\_gaussian}{System}{$r$,$\sigma_{x}$,$\sigma_{y}$,$distance$}{$\gamma$,$focus_{xw}$,$focus_{yh}$,$E_0$,${\rm d}E$,$\lambda_0$,${\rm d}\lambda$,$phase$}
+\section{Source\_gaussian: the model has a gaussian distribution of intensity}
+\label{source-gaussian}
+\index{Sources!Source_gaussian}
+\component{Source\_gaussian}{System}{$d$,$w$,$h$}{$sig_x$,$sig_y$,$sigPr_x$,$sigPr_y$,$flux$,$distance$, $\lambda_0$,$\lambda 0$,$E0$,$dE$,$phase$}
 
-This component models a situation where a photons are emitted from a gaussian crossection in the $XY$-plane. Photons are emitted in the forward direction, in a $\frac{1}{\gamma}$-profile.
-\begin{figure}
-\label{f:source_gaussian}
-\caption{Geometry of \texttt{Source\_gaussian}}
-\end{figure}
+A simplified version of a completely incoherent source of horizontal and vertical sizes $sig_x$ and $sig_y$ respectively with angular divergence $sigPr_x$ and $sigPr_y$. Can be well used to model an undulator source emitting a photon beam that has gaussian distribution.
+At first, there is a random seeding of photons (the way they are defined within the code, i.e. their position's coordinates and their wavevector's projections) emanating from the earlier specified source area. Even though the seeding is random, it is still happening in accordance with gaussian distribution. 
+Secondly, in accordance with laws of geometrical optics, at a certain significant distance contribution of divergence plays a great part in formation of the final beam size.
+Therefore at a $distance$ one gets a beam with intensity, proportional to initial $flux$. 
