--- a/branches/mcxtrace_1_0/optics.tex
+++ b/branches/mcxtrace_1_0/optics.tex
@@ -1,7 +1,7 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \chapter{Beam optical components:
-Arms, slits, collimators, and filters}
+Arms, slits, filters etc.}
 This chapter contains a number of optical components
 that is used to modify the neutron beam in various ways,
 as well as the ``generic'' component {\bf Arm}.
@@ -16,41 +16,10 @@ as well as the ``generic'' component {\bf Arm}.
 
 \input{filter}
 
-\newpage
-\input{collimator_linear}
-
-\input{collimator_radial}
 
 \newpage
 \chapter{Reflecting optical components: mirrors, and guides}
-\index{Optics|textbf}
+\index{Optics|textbf
+\input{lenses}
 
-% This section describes advanced neutron optical
-% components such as supermirrors and guides as well as various rotating choppers.
-% A description of the reflectivity of a supermirror is found
-% in section~\ref{s:mirror}.
-
-\input{guide}
-
-% \chapter{Moving optical components:
-% Choppers and velocity selectors}
-% We list in this chapter some moving optical components,
-% like choppers, that may be used for TOF class instrument simulations,
-% and velocity selector used for partially monochromatize continuous beams.
-% \index{Library!Components!optics}
-% \index{Optics|textbf}
-% 
-% \input{chopper}
-% 
-% \newpage
-% \input{FermiChopper}
-% 
-% \input{Vitess_ChopperFermi.tex}
-% 
-% \newpage
-% \input{v_selector}
-% \input{selector}
-
-% there follows a chapter
-\newpage
-\input{monochromator}
+\input{}
