First updates in the User Manual, to give the GO signal !
git-svn-id: https://svn.mccode.org/svn/McStasTeX@318 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -27,9 +27,9 @@ as well as authors who left the project:
 Peter Christiansen \verb+<pchristi@hep.lu.se>+\\
 Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark\\
 Present address: University of Lund, Lund, Sweden\\
-Klaus Lieutenant \verb+<Klaus.Lieutenant@ife.no>+ \\
+Klaus Lieutenant \verb+<klaus.lieutenant@helmholtz-berlin.de>+ \\
 Institut Laue-Langevin, Grenoble, France \\
-Present address: Institute for Energy Technology, Kjeller, Norway \\
+Present address: Helmotlz Zentrum Berlin, Germany \\
 Kristian Nielsen \verb+<kristian-nielsen@mail.tele.dk>+ \\
 Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark\\
 Presently associated with: MySQL AB, Sweden
