--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -359,7 +359,7 @@
 }
 
 @misc{mczilla_webpage,
-   note      = {See http://neutron.risoe.dk/McZilla/}
+   note      = {See http://trac.mccode.org/report}
 }
 
 @article{Ageron89,
