--- a/trunk/Adapt_check.tex
+++ b/trunk/Adapt_check.tex
@@ -19,3 +19,5 @@ COMPONENT mycheck = Adapt_check(source_comp = mysource)
 \end{verbatim}
 
 Only one instance of Adapt\_check is allowed in an instrument.
+
+We suggest, as alternative method, to make use of the \texttt{SPLIT} keyword, as described in the \MCS\ User Manual.
