--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -3,7 +3,7 @@
 \chapter{New features in \MCS\ \version\ }
 \label{c:changes}
 
-This version of \MCS\ implements both new features, as well as many bug corrections. Bugs are reported and traced using the \MCS\ Bugzilla system \cite{mczilla_webpage}. We will not present here an extensive list of corrections, and we let the reader refer to this bug reporting service for details. Only important changes are indicated here.
+This version of \MCS\ implements both new features, as well as many bug corrections. Bugs are reported and traced using the \MCS\ Trac Ticket system \cite{mczilla_webpage}. We will not present here an extensive list of corrections, and we let the reader refer to this bug reporting service for details. Only important changes are indicated here.
 
 Of course, we can not guarantee that the software is bullet proof, but we do our best to correct bugs, when they are reported.\index{Bugs}
 
@@ -19,13 +19,8 @@ Of course, we can not guarantee that the software is bullet proof, but we do our
 The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and program). See the dedicated chapter in the {\it User manual} for more details.
 
 \begin{itemize}
-\item New \verb+%include INSTR+ keyword, mechanism to include one instrument in another. Useful for independent
-     build-up of e.g. primary and secondary spectrometer. Or to easily see the effect of moving an instrument
-     to a different beamport or facility. Please consult the relevant
-     documentation in Section \ref{s:instrdefs-include-instr} 
-     before using this feature!
-\item When applying the \verb+WHEN+ keyword, an applied \verb+EXTEND %{ %}+ block will only be active if the \verb+WHEN+
-     returns 'true'.
+\item The \verb+STATE PARAMETERS+ keywords has been removed from components code. We now assume that the neutron state parameters are \verb+x,y,z,vx,vy,vz,sx,sy,sz,t+. \MCS\ 1.X components will need to be adapted by commenting this line.
+\item The \verb+PREVIOUS+ and \verb+MYSELF+ keywords can be used in component instance parameters and positioning (AT/ROTATED) so that one can make use of 'MC_GETPAR(PREVIOUS, parameter)' directly in the TRACE section.
 \end{itemize}
 
 \section{Run-time}
@@ -33,27 +28,9 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 \index{Library!Run-time}
 
 \begin{itemize}
-\item Fix of a limiting case focusing problem reported to neutron-mc by George Apostolopoulos.
-      (See http://mailman.risoe.dk/pipermail/neutron-mc/2007q4/002915.html)
-\end{itemize}
-
-\section{Parallelisation}
-\label{s:new-features:parallelisation}
-\index{Library!parallelisation}
-
-\begin{itemize}
-\item Improved stability of MPI simulations by addition of an 'MPI barrier' (reduces probability of nodes beeing 'out of sync'.
-\item On Windows, an 'mpicc.bat' script has been added for easier setup of McStas with gcc and MPI (We recommend MPICH).
-\item Mac OS X 10.5 Leopard is shipped with built-in support for MPI (OpenMPI). No need to install extra packages.
-\item Use of 'virtual sources' is now supported on MPI clusters. (If running on N nodes, all neutron events will be processed
-     on each of the N nodes - implicit repetition N times of the source contents.)
-\item Much improved gridding support (via ssh). Ready for heterogenous systems, e.g. mixed operating systems and hardware
-     types! (Requires -c compile flag for mcrun or equivalent setting in mcgui.) The only requirement is ssh client on the machine 
-     where the grid run is started, plus ssh daemon and c-compiler (e.g. gcc or simply cc) on the remote machines. Files in the 
-     current dir are transparently copied back and forth, causes a substantial network traffic in some cases. Output data from the 
-     nodes are automatically merged using mcformat. Just as efficient as MPI without any library dependencies at all. Make use 
-     of all processer cores in your machine, simply choose to 'grid'. Windows 'client' host OK, we autodetect ssh and scp binaries
-     from the Putty package.
+\item The number of neutron counts can now exceed $2.10^9$, being stored as a \verb+long long+.
+\item The writing of files has been improved. The \verb+DETECTOR_OUT+ functions now return a \verb+mcdetector+ structure which holds all written information. Simulations also write a 'content.sim' file aside the 'mcstas.sim' one, which holds the integrated counts for each monitor.
+\item A bug has been fixed in the rectangular focusing routine, for large solid angles. Reported by M. Skoulatos, L. Udby and J. Jacobsen.
 \end{itemize}
 
 \section{Components and Library}
@@ -61,49 +38,35 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 \index{Components} \index{Library!Components}
 We here list the new and updated components (found in the \MCS\ \verb+lib+ directory)
 which are detailed in the {\it Component manual}, also mentioned in
-the {\it Component Overview} of the {\it User Manual}.
-\subsection{General}
+the {\it Component Overview} of the {\it User Manual}. Generally, most component parameter names have been uniformized.
+
+\subsection{Components}
 \begin{itemize}
-\item When using the Virtual\_input type components, \-\-ncount is always set to an integer multiplum 
-     (repeat\_count) of the number of events in the file. See also
-     related remark about MPI below.
-\item Most monitors now allow to 'not propagate' the neutron, i.e. not influence the beam. Parameter name
-     is '\verb+restore_neutron+'. For \verb+Monitor_nD.comp+ the equivalent
-     parameter is named 'parallel'.
+\item \verb+Single_crystal.comp+ now provides a lattice curvature option (M. Schulz, FRM2).
+\item \verb+PowderN.comp+ now handles strain (E. Farhi, R. Rogge).
+\item \verb+Monitor_nD+ was wrong in the determination of the flux per cm2 and steradians.
+\item \verb+Guide_anyshape+ allows to model any reflecting geometry from a set of vertices and polygons.
+\item \verb+Lens+ models refractive lenses and prisms (E. Farhi/C. Monzat, ILL).
+\item \verb+Lens_simple+ for refractive lenses with a simple analytical model (H. Frielinghaus).
+\item \verb+PSD_Detector+ can now work in event mode (E. Farhi).
+\item \verb+Multilayer_Sample+ to model a set of refractive layers for e.g. reflectometry. Requires GNU Scientific Library to be previously installed (R. Dalgliesh, ISIS).
+\item 
 \end{itemize}
-\subsection{New components}
+
+\subsection{New example instruments and Data files}
 \begin{itemize}
-\item \verb+MirrorElli.comp+, elliptical mirror. Contributed by Sylvain Desert, LLB.
-\item \verb+MirrorPara.comp+, parabolic mirror. Contributed by Sylvain Desert, LLB.
-\end{itemize}
-\subsection{Updated components}
-\begin{itemize}
-\item \verb+Single_crystal.comp+ validation still ongoing, but has progressed: The algorithm seems OK, but is to some
-     extent not in sync with the documentation. New option to specify reciprocal space vectors directly.
-     (before only real space definitions were possible)
-\end{itemize}
-\subsection{New example instruments}
-\begin{itemize}
-\item \verb+ILL_H25_IN22_sample.instr+ (CRG instrument @ ILL) by E. Farhi / P. Willendrup
-\item \verb+ILL_H25_IN22_resolution.instr+ (CRG instrument @ ILL) by E. Farhi / P. Willendrup
-\item \verb+Incoherent_Test.instr+, instrument to compare incoherent scattering from the different sample comps
-     (V\_samle, PowderN, Single\_crystal, Isotropic\_sqw). More instruments of this type planned (compare
-     guides etc.), by P. Willendrup / E. Knudsen / A. Daoud-Aladine (ISIS)
-\item \verb+FocalisationMirrors.instr+,  test instrument for
-  MirrorElli and MirrorPara, by  Sylvain Desert, LLB
-\item \verb+PSI_DMC.instr+, Powder Diffractometer at PSI, by L. Keller / U. Filges / P. Willendrup
-\end{itemize}
-\subsection{Datafiles}
-\begin{itemize}
-\item 'Bugfix', some of the provided .laz files did not have proper unit for |F2|.
+\item Updated ILL instrument models: H16 guide, IN22, IN12, D16
+\item New ILL instrument models: IN1, IN8, IN20, D2B, D4, IN5
+\item Added HZB NEAT ToF spectrometer model (E. Farhi, R. Lechner)
+\item Adde ISIS_CRISP which uses new multilayer sample (R. Dalgliesh, ISIS)
+\item Sort test instruments in various categories
+\item Update of many data files.
 \end{itemize}
 
 \section{Documentation}
 \label{s:new-features:documentation}
 \begin{itemize}
-\item Manual and component manual slightly updated according to
-  adding/modification of components and functionality.
-\item New appendix on the polarisation features. {\bf(p)}
+\item Manual and component manual fully updated 
 \end{itemize}
 
 \section{Tools, installation}
