added ref to NISP materials database
git-svn-id: https://svn.mccode.org/svn/McStasTeX@323 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/mcstas.bib
+++ b/branches/mcxtrace_1_0/mcstas.bib
@@ -476,3 +476,11 @@
   volume    = {33},
   pages     = {954}
 }
+
+@misc{NIST_ffast,
+        howpublished={url:{http://www.nist.gov/pml/data/ffast/index.cfm}},
+        title = {Detailed Tabulation of Atomic Form Factors, Photoelectric Absorption and Scattering Cross Section, and Mass Attenuation Coefficients for Z = 1-92 from E = 1-10 eV to E = 0.4-1.0 MeV},
+        author = {C. T. Chantler},
+        year = {2000}
+}
+
