--- a/branches/mcxtrace_1_0/optics.tex
+++ b/branches/mcxtrace_1_0/optics.tex
@@ -19,7 +19,7 @@ as well as the ``generic'' component {\bf Arm}.
 
 \newpage
 \chapter{Reflecting optical components: mirrors, and guides}
-\index{Optics|textbf
+\index{Optics|textbf}
 \input{lenses}
 
-\input{guide}
+\input{mirror}
