--- a/branches/mcxtrace_1_0/techniq.tex
+++ b/branches/mcxtrace_1_0/techniq.tex
@@ -111,8 +111,8 @@ One may write the counting result as
 \label{psum}
 I = \sum_i p_i = N \overline{p} ,
 \end{equation}
-where $N$ is the number of rays hitting the detector and the vertical bar
-denote averaging.
+where $N$ is the number of rays hitting the detector and the horizontal bar
+denotes averaging.
 By performing the weight transformations, the (statistical)
 mean value of $I$ is unchanged. However, $N$ will in general be enhanced,
 and this will improve the accuracy of the simulation.
