Change paths to use local structure (via links)
git-svn-id: https://svn.mccode.org/svn/McStasTeX@328 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/install.tex
+++ b/trunk/install.tex
@@ -8,4 +8,4 @@
 The information in this chapter is also available as a separate
 html/ps/pdf document in the \texttt{install\_docs/} folder of your
 \MCS\ installation package.
-\input{../../McCode/trunk/doc/install_docs/tex/install_meat.tex}
+\input{McCode/doc/install_docs/tex/install_meat.tex}
