update author info
git-svn-id: https://svn.mccode.org/svn/McStasTeX@332 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/manual.tex
+++ b/branches/mcxtrace_1_0/manual.tex
@@ -47,8 +47,8 @@
 
 \newcommand{\MCX}{{McXtrace}}
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.0\_rc1}}
-\newcommand{\reldate}{{Apr, 2011}}
+\newcommand{\version}{{1.0}}
+\newcommand{\reldate}{{May 2012}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 \newcommand{\NBIlong}{Niels Bohr Institute, Univeristy of Copenhagen, Copenhagen, Denmark}
