--- a/branches/mcxtrace_1_0/risoe-rep-title.tex
+++ b/branches/mcxtrace_1_0/risoe-rep-title.tex
@@ -47,6 +47,6 @@
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  X-Ray-Tracing~Package\\
  \MCX, Version \version\ }
-\author{Erik Knudsen, Andrea Prodi, Peter Kj\ae r Willendrup and \\Kim Lefmann}
+\author{Erik Bergb\"{a}ck Knudsen, Andrea Prodi, Peter Kj\ae r Willendrup and \\Kim Lefmann}
 \maketitle
 \endgroup
