start to upgrade the old latex document to modern pdflatex and fix broken tex code. Warning: Document does not compile yet due lack of the pictures and some parts needed to be commented out.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@333 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/figures/mcstas_software.tex
+++ b/trunk/figures/mcstas_software.tex
@@ -1,7 +1,7 @@
-%\documentclass{article}
-%\usepackage{pstricks,pst-node}
+\documentclass{article}
+\usepackage{pstricks,pst-node}
 
-%\begin{document}
+\begin{document}
 \vspace{-1cm}
 \begin{pspicture}*(0.0,0.0)(20,8)%\showgrid
 
@@ -74,4 +74,4 @@
 \ncline[linestyle=dashed]{->}{C}{L}
 \end{pspicture}
 
-%\end{document}
+\end{document}
