--- a/trunk/install.tex
+++ b/trunk/install.tex
@@ -8,4 +8,6 @@
 The information in this chapter is also available as a separate
 html/ps/pdf document in the \texttt{install\_docs/} folder of your
 \MCS\ installation package.
-\input{McCode/doc/install_docs/tex/install_meat.tex}
+
+% this file does not exist in SVN ~JS 2013-09-18
+% \input{McCode/doc/install_docs/tex/install_meat.tex}
