--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -84,11 +84,11 @@ The set-up is shown in figure~\ref{f:V-instr}.
 
 \begin{figure}
   \begin{center}
-    \psfrag{Source}{Source}
-    \psfrag{Collimator}{Collimator}
-    \psfrag{Vanadium}{Vanadium}
-    \psfrag{4pipsd}{$4\pi$ PSD}
-    \includegraphics[width=0.9\textwidth]{figures/vanadium.eps}
+%FIXME    \psfrag{Source}{Source}
+%    \psfrag{Collimator}{Collimator}
+%    \psfrag{Vanadium}{Vanadium}
+%    \psfrag{4pipsd}{$4\pi$ PSD}
+    \includegraphics[width=0.9\textwidth]{figures/vanadium}
   \end{center}
 \caption{A sketch of the test instrument for the component
 V\_sample.}
