--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -42,7 +42,7 @@ output formats including IDL, NeXus and XML are available, see section \ref{s:an
 
 \begin{figure}[htb!]
 \begin{center}
-\input{figures/mcstas_software}
+\includegraphics[width=\textwidth]{figures/mcstas_software_png}
 \end{center}
 \caption{An illustration of the structure of \MCS\ .}
 \label{fig:structure}
@@ -64,7 +64,7 @@ with a number of menus,
 see figure~\ref{fig:mcgui}. \index{Tools!mcgui}
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[width=0.55\textwidth]{figures/mcgui.eps}
+    \includegraphics[width=0.55\textwidth]{figures/mcgui}
   \end{center}
 \caption{The graphical user interface \texttt{mcgui}.}
 \label{fig:mcgui}
@@ -90,9 +90,9 @@ be plotted in a window. Depending on your chosen plotting backend, the
 presented graphics will resemble one of those shown in figure \ref{fig:mcplot_figs}.\index{Tools!mcplot}
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[angle=-90,width=0.49\textwidth]{figures/mcplot_PGPLOT.ps}
-    \includegraphics[angle=-90,width=0.49\textwidth]{figures/mcplot_Scilab.eps}
-    \includegraphics[width=0.49\textwidth]{figures/mcplot_Matlab.eps}
+    \includegraphics[angle=-90,width=0.49\textwidth]{figures/mcplot_PGPLOT}
+    \includegraphics[angle=-90,width=0.49\textwidth]{figures/mcplot_Scilab}
+    \includegraphics[width=0.49\textwidth]{figures/mcplot_Matlab}
   \end{center}
 \caption{Output from \texttt{mcplot} with PGPLOT, Scilab and Matlab backends}
 \label{fig:mcplot_figs}
@@ -112,8 +112,8 @@ chosen plotting backend, the presented graphics will resemble one of
 those shown in figures \ref{fig:mcdisp_PGPLOT}-\ref{fig:mcdisp_Matlab}.
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[width=0.48\textwidth]{figures/mcdisplay_PGPLOT.ps}
-    \includegraphics[width=0.48\textwidth]{figures/mcdisplay_TOF.ps}
+    \includegraphics[width=0.48\textwidth]{figures/mcdisplay_PGPLOT}
+    \includegraphics[width=0.48\textwidth]{figures/mcdisplay_TOF}
   \end{center}
 \caption{Left: Output from \texttt{mcdisplay} with PGPLOT backend.
   The left mouse button starts a new neutron ray, the middle button zooms, and
@@ -123,8 +123,8 @@ those shown in figures \ref{fig:mcdisp_PGPLOT}-\ref{fig:mcdisp_Matlab}.
 \end{figure}
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[width=0.55\textwidth]{figures/mcdisplay_Scilab.ps}
-    \includegraphics[width=0.25\textwidth]{figures/mcdisplay_Scilab_dialog.ps}
+    \includegraphics[width=0.55\textwidth]{figures/mcdisplay_Scilab}
+    \includegraphics[width=0.25\textwidth]{figures/mcdisplay_Scilab_dialog}
   \end{center}
 \caption{Output from \texttt{mcdisplay} with Scilab backend. Display
   can be adjusted using the dialogbox (right).}
@@ -132,7 +132,7 @@ those shown in figures \ref{fig:mcdisp_PGPLOT}-\ref{fig:mcdisp_Matlab}.
 \end{figure}
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[width=0.55\textwidth]{figures/mcdisplay_Matlab.eps}
+    \includegraphics[width=0.55\textwidth]{figures/mcdisplay_Matlab}
   \end{center}
 \caption{Output from \texttt{mcdisplay} with Matlab backend. Display
   can be adjusted using the window buttons.}
@@ -1291,7 +1291,7 @@ To use the \verb+mcplot+ front-end, the programs Perl, and either Scilab or Matl
 
 \begin{figure}[htb!]
   \begin{center}
-    \includegraphics[angle=-90,width=0.9\textwidth]{figures/mcresplot_PGPLOT.ps}
+    \includegraphics[angle=-90,width=0.9\textwidth]{figures/mcresplot_PGPLOT}
   \end{center}
 \caption{Output from \texttt{mcresplot} with PGPLOT backend.
   Use P, C and G keys to write hardcopy files.}
