change old verbatim to fancy listings environment
git-svn-id: https://svn.mccode.org/svn/McStasTeX@337 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -22,7 +22,7 @@
 \usepackage{xcolor}
 \usepackage{listings}
 
-\definecolor{srcback}{gray}{0.98}
+\definecolor{srcback}{rgb}{1,0.8,0.1}
 
 \lstset{ %
 language=C++,                % choose the language of the code
