listings sed -i "s/verbatim/lstlisting/g" kernel.tex
git-svn-id: https://svn.mccode.org/svn/McStasTeX@340 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -82,7 +82,7 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 \include{install}
 \include{techniq}
 \include{running}
-%\include{kernel}
+\include{kernel}
 %\include{comp} % now in separate Manual
 \include{comp_abstract}
 \include{instrum}
