--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -168,9 +168,9 @@ standard component library (as well as in the current directory and any
 user-specified search directories, see section~\ref{s:files}). It is
 also possible to explicitly include another file using a line of the
 form \index{Keyword!\%include}
-\begin{verbatim}
+\begin{lstlisting}
     %include "file"
-\end{verbatim}
+\end{lstlisting}
 Beware of possible confusion with the C language ``\verb+#include+''
 statement, especially when it is used in C code embedded within the
 \MCS\ meta-language. Files referenced with ``\verb+%include+'' are read
@@ -212,14 +212,14 @@ translation and rotation relative to another component.
 % FIXME An example is given in section~\ref{s:Samples_vanadium.instr} and some additional examples of instrument definitions can be found on the McStas web-page~\cite{mcstas_webpage} and in the \texttt{example} directory.
 
 As a summary, the usual grammar for instrument descriptions is
-\begin{listing}
+\begin{lstlisting}
 DEFINE INSTRUMENT name(parameters)
 DECLARE C_code
 INITIALIZE C_code {NEXUS}
 TRACE components
 {FINALLY C_code}
 END
-\end{listing}
+\end{lstlisting}
 
 
 \subsection{The instrument definition head}
@@ -322,11 +322,11 @@ Then, the output format is chosen as usual with the \verb+--format=NeXus+ option
 
 
 As a summary, the usual grammar for component instances within the instrument TRACE section is
-\begin{verbatim}
+\begin{lstlisting}
 COMPONENT name = comp(parameters)
   AT (...) [RELATIVE [reference|PREVIOUS] | ABSOLUTE]
  {ROTATED  {RELATIVE [reference|PREVIOUS] | ABSOLUTE} }
-\end{verbatim}
+\end{lstlisting}
 
 The \texttt{TRACE} keyword starts a section giving the list of
 components that constitute the instrument.
@@ -467,7 +467,7 @@ The end of the instrument definition must be explicitly marked using the keyword
 A commented instrument definition taken from the \texttt{examples} directory is
 here shown as an example of the use of \MCS .
  
-% FIXME \smallverbatimfile{McCode/mcstas-comps/examples/Samples_vanadium.instr}
+% FIXME \smalllstlistingfile{McCode/mcstas-comps/examples/Samples_vanadium.instr}
 
 
 
@@ -479,20 +479,20 @@ In this section, we describe some additional ways to build instruments using gro
 
 As a summary, the nearly complete grammar definition for component instances within the instrument TRACE section is:
 
-\begin{verbatim}
+\begin{lstlisting}
 {SPLIT} COMPONENT name = comp(parameters) {WHEN condition}
   AT (...) [RELATIVE [reference|PREVIOUS] | ABSOLUTE]
   {ROTATED {RELATIVE [reference|PREVIOUS] | ABSOLUTE} }
   {GROUP group_name}
   {EXTEND C_code}
   {JUMP [reference|PREVIOUS|MYSELF|NEXT] [ITERATE number_of_times | WHEN condition] }
-\end{verbatim}
+\end{lstlisting}
 
 \subsection{Embedding instruments in instruments TRACE}
 \index{Keyword!\%include}
 \label{s:instrdefs-include-instr}
 The \texttt{\%include} insertion mechanism may be used within the TRACE section, in order to catenate instruments together. This way, each DECLARE, INITIALIZE, SAVE, and FINALLY C blocks, as well as instrument parameters from each part are catenated. The TRACE section is made of inserted COMPONENTS from each part. In principle, it then possible to write an instrument as:
-\begin{verbatim}
+\begin{lstlisting}
 DEFINE catenated()
 TRACE
 
@@ -500,11 +500,11 @@ TRACE
 %include "part2.instr"
 
 END
-\end{verbatim}
+\end{lstlisting}
 where each inserted instrument is a valid full instrument. In order to avoid some components to be duplicated - e.g. Sources from each part - a special syntax in the TRACE section
-\begin{verbatim}
+\begin{lstlisting}
 REMOVABLE COMPONENT a=...
-\end{verbatim}
+\end{lstlisting}
 marks the component {\it a} as removable when inserted. In principle, inserted instruments may themselves use \texttt{\%include}.
 
 \subsection{Groups and component extensions - GROUP - EXTEND}
@@ -596,7 +596,7 @@ This automatic naming may be used anywhere in the TRACE section of the instrumen
 
 As an example, we show how to build a guide made of equivalent elements. Only the first instance of the Guide component is defined, whereas following instances are copies of that definition. The instance name of Guide components is set automatically.
 
-\begin{verbatim}
+\begin{lstlisting}
 COMPONENT CG_In = Arm() AT (...)
 
 COMPONENT CG_1  = Guide_gravity(l=L/n, m=1, ...)
@@ -611,7 +611,7 @@ COMPONENT COPY(CG_1)  = COPY(CG_1)
   ROTATED (0, (L/n+d)/R*180/PI, 0) RELATIVE PREVIOUS
 ...
 COMPONENT CG_Out = Arm() AT (0,0,L/n) RELATIVE PREVIOUS
-\end{verbatim}
+\end{lstlisting}
 
 \subsection{Conditional components - WHEN}
 \index{Keyword!WHEN}
@@ -629,7 +629,7 @@ It is evaluated before the component TRACE section.
 Usage examples could be to have specific monitors only sensitive to selected processes, or to have components which are only present under given circumstances (e.g. removable guide or radial collimator), or to select a sample among a set of choices.
 
 In the following example, an EXTEND block sets a condition when a scattering event is encountered, and the following monitor is then activated.
-\begin{verbatim}
+\begin{lstlisting}
 COMPONENT Sample = V_sample(...) AT ...
   EXTEND
   %{
@@ -638,7 +638,7 @@ COMPONENT Sample = V_sample(...) AT ...
 
 COMPONENT MyMon = Monitor(...) WHEN (flag==1)
   AT ...
-\end{verbatim}
+\end{lstlisting}
 
 The WHEN keyword only applies to the TRACE section and related EXTEND blocks of instruments/components. Other sections (INITIALIZE, SAVE, MCDISPLAY, FINALLY) are executed independently of the condition. As a side effect, the 3D view of the instrument (mcdisplay) will show all components as if all conditions were true.
 
@@ -678,7 +678,7 @@ There is a more general way to iterate components, which consists in repeating t
 This method is specially suited for very long curved guides of similar components, but in order to take into account rotation and translation between guide sections, the iterations are performed between Arm's.
 
 In the following example for a curved guide made on $n=500$ elements of length $L$ on a curvature radius $R$, with gaps $d$ between elements, we simply write:
-\begin{verbatim}
+\begin{lstlisting}
 COMPONENT CG_In = Arm() AT (...)
 
 COMPONENT CG_1  = Guide_gravity(l=L/n, m=1, ...)
@@ -694,7 +694,7 @@ COMPONENT CG_2  = Guide_gravity(l=L/n, m=1, ...)
   JUMP CG_2_Position ITERATE n
 ...
 COMPONENT CG_Out = Arm() AT (0,0,L/n) RELATIVE PREVIOUS
-\end{verbatim}
+\end{lstlisting}
 
 Similarly to the \texttt{WHEN} modifier (see section \ref{s:instrdefs-extend-when}), \texttt{JUMP} only applies within the TRACE section of the instrument definition. Other sections (INITIALIZE, SAVE, MCDISPLAY, FINALLY) are exectuted independently of the jump. As a side effetc, the 3D view of the instrument (mcdisplay) will show components as if there was no jump. This means that in the following example, the very long guide 3D view only shows a single guide element.
 
@@ -893,7 +893,7 @@ declared in the \texttt{DECLARE} section should be \texttt{OUTPUT} parameters of
 the component because \MCS\ will then rename variables to avoid conflicts.
 For example, a simple detector might be defined as follows:
 \begin{quote}
-\begin{verbatim}
+\begin{lstlisting}
 DEFINE COMPONENT Detector
 OUTPUT PARAMETERS (counts)
 DECLARE
@@ -901,7 +901,7 @@ DECLARE
   int counts;
 %}
 ...
-\end{verbatim}
+\end{lstlisting}
 \end{quote}
 \index{Keyword!OUTPUT PARAMETERS}
 \index{Library!Run-time!MC\_GETPAR}
@@ -910,7 +910,7 @@ neutrons detected. In the instrument definition, the \texttt{counts}
 parameter may be referenced using the \verb+MC_GETPAR+ C macro, as in
 the following example instrument fragment:\label{mcgetpar}
 \begin{quote}
-\begin{verbatim}
+\begin{lstlisting}
 COMPONENT d1 = Detector()
 ...
 COMPONENT d2 = Detector()
@@ -920,7 +920,7 @@ FINALLY
   printf("Detector counts: d1 = %d, d2 = %d\n",
          MC_GETPAR(d1,counts), MC_GETPAR(d2,counts));
 %}
-\end{verbatim}
+\end{lstlisting}
 \end{quote}
 This way, \MCS\ takes care to rename transparently the two 'counts'
 \texttt{OUTPUT} parameters so that they are distinct, and can be
@@ -1204,9 +1204,9 @@ single argument: a string containing zero or more of the letters ``x'',
 ``y'' and ``z''. It causes the drawing to be enlarged along the
 specified axis in case \verb+mcdisplay+ is called with the \verb+--zoom+
 option. For example:
-\begin{verbatim}
+\begin{lstlisting}
     magnify("xy");
-\end{verbatim}
+\end{lstlisting}
 
 
 \paragraph{The {\tt line} command}
@@ -1241,14 +1241,14 @@ one of the nasty quirks of C since \emph{no} type checking is
 performed by the C compiler. It is thus very important that all
 arguments to {\tt multiline} (except $n$) are valid numbers of type {\tt
   double}. A common mistake is to write
-\begin{verbatim}
+\begin{lstlisting}
     multiline(3, x, y, 0, ...)
-\end{verbatim}
+\end{lstlisting}
 which will silently produce garbage output. This must instead be
 written as
-\begin{verbatim}
+\begin{lstlisting}
     multiline(3, (double)x, (double)y, 0.0, ...)
-\end{verbatim}
+\end{lstlisting}
 
 \paragraph{The {\tt rectangle} command}
 
@@ -1278,28 +1278,27 @@ The command draws a box with the center at $(x, y, z)$ and the size {\it xwidth}
 \paragraph{The {\tt circle} command}
 
 The {\tt circle} command takes the following form:
-\begin{quote}
-  \texttt{circle({\it plane}, $x$, $y$, $z$, $r$)}
-\end{quote}
+\begin{lstlisting}
+circle({\it plane}, $x$, $y$, $z$, $r$)
+\end{lstlisting}
 Here {\it plane} should be either \verb+"xy"+, \verb+"xz"+, or
 \verb+"yz"+. The command draws a circle in the specified plane with the center
  at $(x, y, z)$ and the radius $r$.
 
 
-
 \subsection{The end of the component definition}
 \index{Keyword!END}
 
-\begin{quote}
-  \texttt{END}
-\end{quote}
+\begin{lstlisting}
+END
+\end{lstlisting}
 This marks the end of the component definition.
 
 \subsection{A component example: Slit}
 \label{s:slit}
 A simple example of the component \texttt{Slit} is given.
 
-\smallverbatimfile{McCode/mcstas-comps/optics/Slit.comp}
+% FIXME \smalllstlistingfile{McCode/mcstas-comps/optics/Slit.comp}
 
 
 \section{Extending component definitions}
